2022-12-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-restrict-list): Update.

2022-11-30  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-run-pkgdev
	and ebuild-mode-run-pkgcheck.

	* ebuild-mode.el (ebuild-compilation-mode): New mode for
	compilation buffers, filters SGR control sequences.
	(ebuild-log-buffer-mode): Default to it.
	(ebuild-mode-run-pkgdev, ebuild-mode-run-pkgcheck): Call compile
	with ebuild-log-buffer-mode.
	(ebuild-mode-process-environment): Don't set NOCOLOR if ansi-color
	is available.

2022-11-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-ebuild-history)
	(ebuild-mode-pkgdev-history, ebuild-mode-pkgcheck-history):
	New variables.
	(ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Use them.

	* ebuild-mode.el (ebuild-mode-process-environment): New custom
	variable. Bug 882055.
	(ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Use it.

	* ebuild-mode.el (ebuild-mode-ebuild-cmd-complete): New function,
	completes multiple ebuild commands. Bug 882053.
	(ebuild-run-command): Call it.
	(ebuild-mode-menu): Add ebuild-run-command without argument.

2022-11-19  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): New commands. Bug 881449.
	(ebuild-mode-map, ebuild-mode-menu): Keybindings and menu entries
	for them.
	(ebuild-mode-pkgdev-commands, ebuild-mode-pkgcheck-commands):
	New variables.
	(ebuild-mode-get-completion-function): New function, split off
	from ebuild-mode-ekeyword-complete.
	(ebuild-mode-ekeyword-complete): Call it.
	(ebuild-mode-command-complete): New function.

2022-11-18  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Fix byte-compile warning
	in XEmacs.

	* ebuild-mode.el (ebuild-mode-collect-and-split): Renamed from
	ebuild-mode-collect-equal-cdrs. Split the car of an element if its
	length is above the limit.