@@ -1,5 +1,10 @@
 2022-12-01  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el: Add documentation to some functions and
+	variables.
+	(ebuild-compilation-mode): Reword docstring to avoid an open paren
+	at the beginning of a line, which confuses some Emacs versions.
+
 	* ebuild-mode.el (ebuild-mode-restrict-list): Update.
 
 2022-11-30  Ulrich Müller  <ulm@gentoo.org>
